change extension name to api-testing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "API Testing",
+	"name": "api-testing",
 	"displayName": "API Testing",
 	"description": "API Testing",
 	"version": "0.0.1",
