--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "api-testing",
 	"displayName": "API Testing",
 	"description": "API Testing",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"repository": "https://github.com/linuxsuren/vscode-api-testing",
 	"engines": {
 		"vscode": "^1.68.0"
@@ -12,7 +12,7 @@
 	],
 	"publisher": "linuxsuren",
 	"activationEvents": [
-		"atest"
+		"onStartupFinished"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
@@ -21,6 +21,10 @@
 				"command": "atest",
 				"title": "API Testing",
 				"description": "API Testing."
+			},
+			{
+				"command": "atest.runwith",
+				"title": "API Testing with a specific env"
 			}
 		],
 		"configuration": {
@@ -102,19 +106,20 @@
 		"@types/vscode": "^1.68.0",
 		"@vscode/test-electron": "^2.1.3",
 		"async": "~1.5.2",
+		"esbuild": "^0.17.10",
 		"eslint": "^8.16.0",
 		"glob": "^8.0.3",
 		"mocha": "^10.0.0",
 		"typescript": "^4.7.2",
-		"esbuild": "0.17.10",
 		"webpack": "~4.43.0",
 		"webpack-cli": "~3.3.11"
 	},
 	"dependencies": {
-		"@grpc/proto-loader": "~0.5.4",
-		"lodash": "~4.17.0",
-		"google-protobuf": "~3.14.0",
 		"@grpc/grpc-js": "~1.0.5",
+		"@grpc/proto-loader": "~0.5.4",
+		"google-protobuf": "~3.14.0",
+		"js-yaml": "^4.1.0",
+		"lodash": "~4.17.0",
 		"q": "^1.5.1",
 		"remark": "^14.0.2",
 		"remark-admonitions": "^1.2.1",
