--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
 		"@types/node": "16.x",
 		"@types/vscode": "^1.68.0",
 		"@vscode/test-electron": "^2.1.3",
+		"@vscode/vsce": "^2.22.0",
 		"async": "~1.5.2",
 		"esbuild": "^0.17.10",
 		"eslint": "^8.16.0",
